dataset1235/2025-2/805158916/users/3012285892/executions/2118643220_316614342.log
== SUBMISSION (2025-09-01 14:23:42)
-- CODE: 
import math

lado = float(input())

apotema = lado/(2*math.tan(math.pi/7))

area = (7/2)*lado*apotema

print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
178.06
---- user output:
178.06
-- TEST CASE 2:
---- input:
3
---- correct output:
32.71
---- user output:
32.71
-- TEST CASE 3:
---- input:
6
---- correct output:
130.82
---- user output:
130.82
-- TEST CASE 4:
---- input:
5
---- correct output:
90.85
---- user output:
90.85
-- TEST CASE 5:
---- input:
4
---- correct output:
58.14
---- user output:
58.14
-- TEST CASE 6:
---- input:
6
---- correct output:
130.82
---- user output:
130.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:12:34)
-- CODE: 
import math

lado = float(input())
apotema = lado/2(mtan(math.pi/7))
area = 7/2* lado * apotema

print (round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
178.06
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema = lado/2(mtan(math.pi/7))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2(mtan(math.pi/7))
                     ^^^^
NameError: name 'mtan' is not defined
-- TEST CASE 2:
---- input:
3
---- correct output:
32.71
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema = lado/2(mtan(math.pi/7))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2(mtan(math.pi/7))
                     ^^^^
NameError: name 'mtan' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
130.82
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema = lado/2(mtan(math.pi/7))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2(mtan(math.pi/7))
                     ^^^^
NameError: name 'mtan' is not defined
-- TEST CASE 4:
---- input:
5
---- correct output:
90.85
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema = lado/2(mtan(math.pi/7))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2(mtan(math.pi/7))
                     ^^^^
NameError: name 'mtan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
58.14
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema = lado/2(mtan(math.pi/7))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2(mtan(math.pi/7))
                     ^^^^
NameError: name 'mtan' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
130.82
-- ERROR:
XXXX:4: SyntaxWarning: 'int' object is not callable; perhaps you missed a comma?
  apotema = lado/2(mtan(math.pi/7))
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apotema = lado/2(mtan(math.pi/7))
                     ^^^^
NameError: name 'mtan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
